--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 <div class="container">
     <div class="nav-wrapper">
       <h1 class="brand-logo right"><a href="#" title="access boodaweb github page">Booda</a></h1>
-      <ul id="nav-mobile" class="left hide-on-med-and-down">
+     <!-- <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
         <li><a href="collapsible.html">JavaScript</a></li>
-      </ul>
+        
+    </ul>-->
     </div>
 </div>
 
